--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,23 @@
 /* Import custom animations */
 @import './styles/animations.css';
 
+/* Custom Fonts */
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./styles/font/Gilroy-Light.otf') format('opentype');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./styles/font/Gilroy-ExtraBold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
 * {
   margin: 0;
   padding: 0;
